[package]
authors = ["SAK"]
categories = ["games"]
description = "Backend service for pokerd"
edition = "2024"
keywords = ["poker", "web3", "decentralized", "axum"]
name = "pokerd-backend"
readme = "./README.md"
repository = "https://github.com/SAK-monad-hackathon/pokerd-backend"
version = "0.1.0"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }

[dependencies]
alloy = { version = "0.12.4", default-features = false, features = [
    "essentials",
    "reqwest-rustls-tls",
    "std",
    "eip712",
] }
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4.40"
derive_more = { version = "2.0.1", features = ["full"] }
jsonwebtoken = "9.3.1"
rand = { version = "0.9.0", features = ["log"] }
rs_poker = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
