[package]
authors = ["SAK"]
categories = ["games"]
description = "Backend service for pokerd"
edition = "2024"
keywords = ["poker", "web3", "decentralized", "axum"]
name = "pokerd-backend"
readme = "./README.md"
repository = "https://github.com/SAK-monad-hackathon/pokerd-backend"
version = "0.1.0"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }

[dependencies]
alloy = { version = "0.12.4", default-features = false, features = [
    "essentials",
    "reqwest-rustls-tls",
    "std",
    "eip712",
] }
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.40"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "charset",
    "rustls-tls",
    "http2",
    "json",
] }
rs_poker = { version = "3.0.0-beta.31", features = [
    "serde",
], git = "https://github.com/elliottneilclark/rs-poker.git", tag = "v3.0.0-beta.31" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
